# EffectiLearn

./: .gitignore  README.md
implementation/: CMakeLists.txt
implementation/src/bayes/core/: bayes.cpp  bayes.h
implementation/src/boost/: adaboost.h
implementation/src/boost/core/: adaboost.cpp  adaboost.h
implementation/src/common/core/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  classifier.cpp  classifier.h  cluster.h  common.cpp  common.h  dist_func.cpp  dist_func.h  kernel_function.cpp  kernel_function.h  optimizer.cpp  optimizer.h  prob_distribution.cpp  prob_distribution.h  util.cpp  util.h
implementation/src/decisiontree/core/: attr_select.cpp  attr_select.h  decisiontree.cpp  decisiontree.h
implementation/src/decisiontree/wrapper/: decisiontree.py
implementation/src/exception/: exception.h
implementation/src/hmm/core/: hmm.cpp  hmm.h
implementation/src/kernel_svm/core/: svm.cpp  svm.h
implementation/src/knn/core/: kdtree.cpp  kdtree.h  knn.cpp  knn.h
implementation/src/logistic/core/: logistic.cpp  logistic.h
implementation/src/mlp/core/: activation.cpp  activation.h  cost.cpp  cost.h  layer.cpp  layer.h  mlp.cpp  mlp.h
implementation/src/perception/core/: perception.cpp  perception.h
implementation/src/perceptron/core/: perceptron.cpp  perceptron.h
implementation/src/proto_cluster/core/: kmeans.cpp  kmeans.h  (+2 more)
implementation/test/core_test/: bayes_test.cpp  common.cpp  common.h  decision_tree_test.cpp  knn_test.cpp  logistic_test.cpp  mlp_test.cpp  perceptron_test.cpp  svm_test.cpp
implementation/test/dataset/: iris_num.data
(+28 files in other folders)
